--- a/SecurityProj1-LocaleApp/build.gradle
+++ b/SecurityProj1-LocaleApp/build.gradle
@@ -46,6 +46,10 @@ implementation group: 'taglibs', name: 'standard', version: '1.1.2'
  implementation group: 'org.springframework.security', name: 'spring-security-web', version: '5.4.1'
 // https://mvnrepository.com/artifact/org.springframework.security/spring-security-config
 implementation  group: 'org.springframework.security', name: 'spring-security-config', version: '5.4.1'
+// https://mvnrepository.com/artifact/org.springframework/spring-jdbc
+implementation group: 'org.springframework', name: 'spring-jdbc', version: '5.3.2'
+// https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc8
+implementation group: 'com.oracle.database.jdbc', name: 'ojdbc8', version: '19.9.0.0'
 
 
  
